welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:21: error: '(' expected but '{' found.
			if{
                          ^SnakeBuggle:26: error: illegal start of simple expression
		}
                ^